<resources>
    <string name="app_name">leyber_galeas_prueba_02</string>
    <string name="nombres">Nombres:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="dividendo">Dividendo:</string>
    <string name="divisor">Divisor:</string>
    <string name="parte_entera">Parte Entera:</string>
    <string name="residuo">Residuo:</string>
    <string name="num_invertido">Num. Invertido:</string>
    <string name="siguiente">Siguiente</string>
    <string name="mostrar_resultados">Mostrar Resultados</string>
    <string name="cerrar">Cerrar</string>
    <string name="numero">Numero:</string>
</resources>