<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:autofillHints=""
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

  <EditText
      android:id="@+id/etNombresU"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:autofillHints=""
      android:enabled="false"
      android:hint="@string/nombres"
      android:minHeight="48dp" />

  <Space
      android:layout_width="wrap_content"
      android:layout_height="20dp" />

  <EditText
      android:id="@+id/etApellidosU"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:autofillHints=""
      android:enabled="false"
      android:hint="@string/apellidos"
      android:minHeight="48dp" />

  <Space
      android:layout_width="wrap_content"
      android:layout_height="20dp" />

  <EditText
      android:id="@+id/etDividendoU"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:autofillHints=""
      android:enabled="false"
      android:hint="@string/dividendo"
      android:minHeight="48dp" />

  <Space
      android:layout_width="wrap_content"
      android:layout_height="20dp"
      android:autofillHints="" />

  <EditText
      android:id="@+id/etDivisorU"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:enabled="false"
      android:hint="@string/divisor"
      android:minHeight="48dp" />

  <Space
      android:layout_width="wrap_content"
      android:layout_height="20dp" />

  <EditText
      android:id="@+id/etParteEnteraU"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:enabled="false"
      android:hint="@string/parte_entera"
      android:minHeight="48dp" />

  <Space
      android:layout_width="wrap_content"
      android:layout_height="20dp" />

  <EditText
      android:id="@+id/etResiduoU"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:enabled="false"
      android:hint="@string/residuo"
      android:minHeight="48dp" />

  <Space
      android:layout_width="wrap_content"
      android:layout_height="20dp"
      android:autofillHints="" />

  <EditText
      android:id="@+id/etInvertidoU"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:enabled="false"
      android:hint="@string/num_invertido"
      android:minHeight="48dp" />

  <Space
      android:layout_width="wrap_content"
      android:layout_height="20dp" />

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:layout_marginTop="20dp">

    <!-- Botón Siguiente (verde) -->
    <Button
        android:id="@+id/btnSiguienteU"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#00FF00"
        android:enabled="true"
        android:text="@string/siguiente"
        android:textColor="#616161"
        android:textSize="18sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btnMostrarResultadosU"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/mostrar_resultados"
        android:enabled="false"
        android:background="#808080"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
  </LinearLayout>



</LinearLayout>