<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Nombres (gris) -->
    <EditText
        android:id="@+id/etNombresT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/nombres"
        android:minHeight="48dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <!-- Apellidos (gris) -->
    <EditText
        android:id="@+id/etApellidosT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/apellidos"
        android:minHeight="48dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <!-- Dividendo (verde) -->
    <EditText
        android:id="@+id/etDividendoT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:hint="@string/dividendo"
        android:inputType="numberSigned"
        android:minHeight="48dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <!-- Divisor (verde) -->
    <EditText
        android:id="@+id/etDivisorT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:hint="@string/divisor"
        android:inputType="numberSigned"
        android:minHeight="48dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <!-- Numero (verde) -->
    <EditText
        android:id="@+id/etNumeroT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:hint="@string/numero"
        android:inputType="numberSigned"
        android:minHeight="48dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <!-- Botón Cerrar (verde) -->
        <Button
            android:id="@+id/btnCerrarT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerrar"
            android:enabled="true"/>
    </LinearLayout>

</LinearLayout>
